[package]
name = "r3_example_basic_gr_citrus"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rx_supplementary_builtins = { path = "../../src/rx_supplementary_builtins" }
r3_port_rx = { path = "../../src/r3_port_rx" }
rsrx = { path = "../../src/rsrx", features = ["rx63n"] }

r3_kernel = { version = "0.1", features = ["system_time"] }
r3 = { version = "0.2" }

tock-registers = "0.7.0"
